# dpython

./: .pubignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dpython_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dpython.podspec
lib/: dpython.dart  dpython_bindings_generated.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/api/: python.dart  python.freezed.dart
lib/util/: py_path_util.dart
linux/: CMakeLists.txt
macos/: dpython.podspec
macos/Classes/: dpython.c
py/: test.py
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: python.rs
src/: CMakeLists.txt  dpython.c
windows/: CMakeLists.txt
